--- a/image.html
+++ b/image.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Случайная картинка без повторов</title>
+    <title>Tatoo design</title>
     <style>
         body {
             display: flex;
@@ -42,3 +42,4 @@
 </script>
 </body>
 </html>
+
