--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@ const images = [
     "images/17.jpg",
     "images/18.jpg",
     "images/19.jpg",
-    "images/20.jpg",
-    "images/21.jpg",
-    "images/22.jpg",
-    "images/23.jpg",
+    "images/20.jpg"
 ];
 
 let shown = JSON.parse(localStorage.getItem("shownImages") || "[]");
@@ -74,4 +71,5 @@ localStorage.setItem("shownImages", JSON.stringify(shown));
 </script>
 </body>
 </html>
+
 
